Fixed something in FootballClubsFromFile and implemented some tests in GroupControllerTest